--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^2.2.1",
     "knex": "^0.10.0",
     "lodash": "^4.6.1",
+    "lodash.defaults": "^4.0.1",
     "lodash.merge": "^4.3.2",
     "mysql": "^2.10.2",
     "request-promise": "^2.0.1",
