--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "url": "git+https://github.com/shivg/ProjectXYZ.git"
   },
   "dependencies": {
+    "bluebird": "^3.3.4",
+    "body-parser": "^1.15.0",
     "dateformat": "^1.0.12",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "jquery": "^2.2.1",
     "knex": "^0.10.0",
     "lodash": "^4.6.1",
@@ -19,7 +23,8 @@
     "lodash.merge": "^4.3.2",
     "mysql": "^2.10.2",
     "request-promise": "^2.0.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "webpack": "^1.12.14"
   },
   "keywords": [
     "jobs"
