--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Search and manage your job applications the easy way",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --content-base build/"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "lodash.defaults": "^4.0.1",
     "lodash.merge": "^4.3.2",
     "mysql": "^2.10.2",
+    "react": "^0.14.7",
     "request-promise": "^2.0.1",
     "underscore": "^1.8.3",
     "webpack": "^1.12.14"
@@ -34,5 +36,11 @@
   "bugs": {
     "url": "https://github.com/shivg/ProjectXYZ/issues"
   },
-  "homepage": "https://github.com/shivg/ProjectXYZ#readme"
+  "homepage": "https://github.com/shivg/ProjectXYZ#readme",
+  "devDependencies": {
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
