--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --content-base build/"
+    "dev": "webpack --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "lodash.merge": "^4.3.2",
     "mysql": "^2.10.2",
     "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "request-promise": "^2.0.1",
     "underscore": "^1.8.3",
     "webpack": "^1.12.14"
@@ -41,6 +42,8 @@
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "clean-webpack-plugin": "^0.1.8",
     "webpack-dev-server": "^1.14.1"
   }
 }
