--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "dateformat": "^1.0.12",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
@@ -23,6 +24,8 @@
     "lodash.defaults": "^4.0.1",
     "lodash.merge": "^4.3.2",
     "mysql": "^2.10.2",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "request-promise": "^2.0.1",
