--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "request-promise": "^2.0.1",
+    "sequelize": "^3.19.3",
     "underscore": "^1.8.3",
     "webpack": "^1.12.14"
   },
