--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "lodash": "^4.6.1",
     "lodash.defaults": "^4.0.1",
     "lodash.merge": "^4.3.2",
+    "moment": "^2.12.0",
     "mysql": "^2.10.2",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
+    "pg": "^4.5.1",
+    "pg-hstore": "^2.3.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "request-promise": "^2.0.1",
