--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --config ./webpack.config.js"
+    "start": "webpack --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -26,8 +26,11 @@
     "mysql": "^2.10.2",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
+    "compression": "^1.6.1",
+    "if-env": "^1.0.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.0.0",
     "request-promise": "^2.0.1",
     "underscore": "^1.8.3",
     "webpack": "^1.12.14"
