--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shivg/ProjectXYZ.git"
+    "url": "git+https://github.com/FlammableHairnet/HireOrbit.git"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
@@ -45,9 +45,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/shivg/ProjectXYZ/issues"
+    "url": "https://github.com/FlammableHairnet/HireOrbit/issues"
   },
-  "homepage": "https://github.com/shivg/ProjectXYZ#readme",
+  "homepage": "https://github.com/FlammableHairnet/HireOrbit#readme",
   "devDependencies": {
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
