--- a/package.json
+++ b/package.json
@@ -13,32 +13,45 @@
     "url": "git+https://github.com/FlammableHairnet/HireOrbit.git"
   },
   "dependencies": {
+    "babel-polyfill": "^6.7.2",
+    "babel-preset-stage-1": "^6.1.18",
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
+    "compression": "^1.6.1",
     "cookie-parser": "^1.4.1",
     "dateformat": "^1.0.12",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "history": "^1.17.0",
+    "if-env": "^1.0.0",
     "jquery": "^2.2.1",
     "knex": "^0.10.0",
     "lodash": "^4.6.1",
     "lodash.defaults": "^4.0.1",
     "lodash.merge": "^4.3.2",
+    "marked": "^0.3.5",
     "moment": "^2.12.0",
     "mysql": "^2.10.2",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "compression": "^1.6.1",
-    "if-env": "^1.0.0",
     "pg": "^4.5.1",
     "pg-hstore": "^2.3.2",
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^0.14.7",
+    "react-addons-update": "^0.14.7",
+    "react-dnd": "^2.1.3",
+    "react-dnd-html5-backend": "^1.0.0",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.0.0",
     "react-router": "^2.0.0",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
     "request-promise": "^2.0.1",
     "sequelize": "^3.19.3",
     "underscore": "^1.8.3",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "whatwg-fetch": "^0.11.0"
   },
   "keywords": [
     "jobs"
