--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config ./webpack.config.js",
+    "start": "rm client/bundle.js; webpack --config ./webpack.config.js; nodemon server/server.js",
     "dev": "webpack-dev-server --inline --content-base ./client/"
   },
   "repository": {
