--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Search and manage your job applications the easy way",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "rm client/bundle.js; webpack --config ./webpack.config.js; nodemon server/server.js",
+    "test": "NODE_ENV=test NODE_PATH=. mocha --compilers js:babel-register -r spec/support/setup.mocha.js --recursive 'spec/**/*.test.js' -w",
+    "start": "webpack --config ./webpack.config.js",
     "dev": "webpack-dev-server --inline --content-base ./client/"
   },
   "repository": {
@@ -65,9 +65,18 @@
   "devDependencies": {
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-rewire": "^1.0.0-beta-5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.2.0",
     "clean-webpack-plugin": "^0.1.8",
+    "jsdom": "^8.1.0",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7",
+    "rewire-webpack": "^1.0.1",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
