--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ client/bundle.js
 # Ignore the BUILD file
 client/bundle.js
 
+# config
+
+db/config.js
+
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
