--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "NODE_ENV=test NODE_PATH=. mocha --compilers js:babel-register -r spec/support/setup.mocha.js --recursive 'spec/**/*.test.js' -w",
     "start": "rm -rf ./client/bundle.js; webpack --config ./webpack.config.js; node server/server.js",
-    "deploy": "rm -rf ./client/bundle.js; webpack --config ./webpack.config.js;NODE_ENV=PRODUCTION node server/server.js",
+    "deploy": "NODE_ENV=PRODUCTION webpack --config ./webpack.config.js;NODE_ENV=PRODUCTION node server/server.js",
+    "testdeploy": "NODE_ENV=PRODUCTION webpack --config ./webpack.config.js;NODE_ENV=testdeploy node server/server.js",
     "dev": "webpack-dev-server --inline --content-base ./client/"
   },
   "repository": {
