--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
+    "chai-jquery": "^2.0.0",
     "clean-webpack-plugin": "^0.1.8",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
