Change OAuth Provider to Google for Gcal integration

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ client/bundle.js.map
 # config
 
 db/config.js
+server/config/config.js
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
