--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql": "^2.10.2",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
+    "passport-google-oauth20": "^1.0.0",
     "pg": "^4.5.1",
     "pg-hstore": "^2.3.2",
     "react": "^0.14.7",
