--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^0.14.7",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0",
+    "react-widgets": "^3.2.0",
     "redux": "^3.0.4",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
