Implement logoFetcher script to fetch possible logos for companies in db

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-stage-1": "^6.1.18",
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
+    "cheerio": "^0.20.0",
     "compression": "^1.6.1",
     "cookie-parser": "^1.4.1",
     "d3": "^3.5.16",
@@ -28,6 +29,7 @@
     "express-session": "^1.13.0",
     "googleapis": "^3.1.0",
     "history": "^1.17.0",
+    "htmlparser2": "^3.9.0",
     "if-env": "^1.0.0",
     "jquery": "^2.2.1",
     "knex": "^0.10.0",
