--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dnd-html5-backend": "^1.0.0",
     "react-dom": "^0.14.7",
     "react-iframe": "0.0.4",
+    "react-rating": "^0.2.2",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0",
     "react-widgets": "^3.2.0",
