--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-google-oauth20": "^1.0.0",
     "pg": "^4.5.1",
     "pg-hstore": "^2.3.2",
+    "process-nextick-args": "^1.0.6",
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
     "react-addons-update": "^0.14.7",
@@ -58,6 +59,7 @@
     "redux-promise": "^0.5.3",
     "request-promise": "^2.0.1",
     "sequelize": "^3.19.3",
+    "string_decoder": "^0.10.31",
     "underscore": "^1.8.3",
     "webpack": "^1.12.14",
     "whatwg-fetch": "^0.11.0"
