--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^1.0.0",
     "react-dom": "^0.14.7",
+    "react-iframe": "0.0.4",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0",
     "react-widgets": "^3.2.0",
