--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
     "react-addons-update": "^0.14.7",
+    "react-awesome-modal": "^0.2.8",
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^1.0.0",
     "react-dom": "^0.14.7",
