--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^0.20.0",
     "compression": "^1.6.1",
     "cookie-parser": "^1.4.1",
+    "crypto": "0.0.3",
     "d3": "^3.5.16",
     "dateformat": "^1.0.12",
     "express": "^4.13.4",
