--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,14 @@
 version: '2'
 services:
-  web:
+  web1:
     build: .
     ports:
-        - "80:80"
+        - "3001:80"
+
+  web2:
+    build: .
+    ports:
+       - "3002":"80"
 
   postgres:
     image: postgres
@@ -12,3 +17,4 @@ services:
       PGDATA: "/var/postgres/data/pgdata"
     volumes:
       - /var/postgres/data/pgdata:/var/postgres/data/pgdata
+      
